# fish_bot

./: Cargo.toml  README.md
src/: main.rs
