[package]
name = "fish_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
widestring = "1.0.2"
windows = { version = "0.48.0", features = [
    "implement",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
] }
