[package]
name = "fish_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.24"
ctrlc = "3.2.5"
eframe = "0.21.3"
egui = "0.21.0"
mac_address = { version = "1.1.4", optional = true }
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["blocking"], optional = true }
status-line = "0.2.0"
widestring = "1.0.2"
windows = { version = "0.48.0", features = [
    "implement",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[features]
online = ["dep:reqwest", "dep:mac_address"]
